deployment/apm-server/apm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm-server
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: apm-server
  ports:
    - port: 8200
      targetPort: 8200
      name: http
